feat: start refactor
